cmake_minimum_required(VERSION 3.21)
project(graph_algorithms)
set(CMAKE_CXX_STANDARD 14)
include_directories(.)
add_executable(kruskal kruskal.cpp graph.cpp graph.h)
add_executable(prim prim_dijkstra.cpp)
add_executable(test test_pointer.cpp)
add_executable( unq unique_pntr_test.cpp)
add_executable(frwd forward_Arg_test.cpp)